- Fix install / startup issues relate dto Jetty 12 -  Update EHcache to 3.x -  Add shared ai modules, migrate some developer prompts / skills to new modul - Remove *.war as an exclusion as some folder has .warr in name.