@@ -53,7 +53,7 @@ public class PSRemoteAppletRequester implements IPSRemoteRequester {
   }
 
   /** See {@link IPSRemoteRequester#getDocument(String, Map)} for detail */
-  public Document getDocument(String resource, Map params) throws IOException, SAXException {
+  public Document getDocument(String resource, Map<String, ?> params) throws IOException, SAXException {
     if (resource == null || resource.trim().length() == 0)
       throw new IllegalArgumentException("resource may not be null or empty");
     if (params == null) throw new IllegalArgumentException("params may not be null");
@@ -62,7 +62,7 @@ public class PSRemoteAppletRequester implements IPSRemoteRequester {
   }
 
   /** See {@link IPSRemoteRequester#sendUpdate(String, Map)} for detail */
-  public Document sendUpdate(String resource, Map params) throws IOException, SAXException {
+  public Document sendUpdate(String resource, Map<String, ?> params) throws IOException, SAXException {
     if (resource == null || resource.trim().length() == 0)
       throw new IllegalArgumentException("resource may not be null or empty");
     if (params == null) throw new IllegalArgumentException("params may not be null");
@@ -87,13 +87,20 @@ public class PSRemoteAppletRequester implements IPSRemoteRequester {
    *
    * @see {@link PSHttpConnection#postData(URL, Map)}
    */
-  private Document postData(String resource, Map paramsMap) throws IOException, SAXException {
+  private Document postData(String resource, Map<String, ?> paramsMap) throws IOException, SAXException {
     String resp;
     Document doc = null;
     if (resource.startsWith("/")) {
       resource = resource.substring(1);
     }
-    URL url = new URL(m_url, resource);
+    URL url;
+    try {
+      url = m_url.toURI().resolve(resource).toURL();
+    } catch (java.net.URISyntaxException e) {
+      log.error(PSExceptionUtils.getMessageForLog(e));
+      log.debug(PSExceptionUtils.getDebugMessageForLog(e));
+      throw new IOException(e);
+    }
 
     log.debug("posting to url {} ", url.toString());
     log.debug("Params = {} ", paramsMap);
@@ -120,7 +127,14 @@ public class PSRemoteAppletRequester implements IPSRemoteRequester {
    * @see {@link PSHttpConnection#postData(URL, Document)}
    */
   private Document postData(String resource, Document docData) throws IOException, SAXException {
-    URL url = new URL(m_url, "../" + resource);
+    URL url;
+    try {
+      url = m_url.toURI().resolve("../" + resource).toURL();
+    } catch (java.net.URISyntaxException e) {
+      log.error(PSExceptionUtils.getMessageForLog(e));
+      log.debug(PSExceptionUtils.getDebugMessageForLog(e));
+      throw new IOException(e.toString());
+    }
     try {
       return m_conn.postData(url, docData);
     } catch (PSException e) {
